[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/spritesheets/Benj Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.6065, 23.2788 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.50422, 23.489 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
jumpForce = 465

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="IdleCollision" type="CollisionShape2D" parent="."]
position = Vector2( 12.6134, 24.5962 )
shape = SubResource( 2 )

[node name="WalkCollision" type="CollisionShape2D" parent="."]
position = Vector2( 6.09652, 23.7553 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.66
one_shot = true

[node name="SpecialTimer" type="Timer" parent="."]
one_shot = true

[node name="TauntTimer" type="Timer" parent="."]
wait_time = 1.69
one_shot = true

[node name="AttackRate" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="end_attack"]
[connection signal="timeout" from="SpecialTimer" to="." method="end_attack"]
[connection signal="timeout" from="TauntTimer" to="." method="end_attack"]
[connection signal="timeout" from="AttackRate" to="." method="attack_rate_timeout"]
